Fixed benefits right mobile css alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -238,7 +238,7 @@ body {
 }
 .benefits-right {
   width: 50vw;
-  margin-top: -48%;
+  margin-top: -52%;
   margin-left: 50%;
   margin-bottom: 15%;
 }
